    * 0783 enterasys_lsnat: new check monitoring the current LSNAT bindings
    * 0601 printer_alerts: check can now display a textual representation of the alert code...
            NOTE: Please refer to the migration notes!
    * 0799 ibm_svc_systemstats.cpu_util: New check for CPU Utilization of an IBM SVC / V7000 device in total
    * 0777 FIX: special agent emcvnx: did not work with security file authentication...

    Multisite:
    * 0779 Hostgroups (Summary): Empty hostgroups are no longer shown (can be re-enabled by filter)

    WATO:
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...

    Livestatus:
    * 0747 FIX: livestatus table hostsbygroup: fixed bug with group_authorization strict...


1.2.5i2:
    Checks & Agents:
    * 0147 enterasys_fans: New Check to monitor fans of enterasys swichtes
    * 0774 ibm_svc_nodestats.diskio: new check for disk troughput per node on IBM SVC / V7000 devices
    * 0775 ibm_svc_systemstats.diskio: new check for disk throughput in IBM SVC / V7000 devices in total
    * 0764 lnx_quota: Added new check to monitor Linux File System Quota...
    * 0776 ibm_svc_nodestats.cpu_util: new check for CPU Utilization per Node on IBM SVC / V7000 devices
    * 0600 nfsexports.solaris: new agent plugin for monitoring nfs exports on solaris systems...
    * 0743 mem, fortigate_memory, solaris_mem: display total SWAP info in check output
    * 0745 drbd: Roles and diskstates are now configurable via WATO...
    * 0746 zfsget: fixed problem with agent output of check_mk_agent.solaris...
    * 0740 FIX: winperf_if: now able to handle bandwidth > 4GBit...

    Multisite:
    * 0765 NagVis-Maps-Snapin: Now visualizes downtime / acknowledgment states of maps...
    * 0766 FIX: Changed transid implemtation to work as CSRF protection (Fixes CVE-2014-2330)...

    WATO:
    * 0767 FIX: Signing and verification of WATO snapshot (addresses CVE-2014-2330)...

    BI: