@@ -1,0 +1,19 @@
+title: IBM SVC / V7000: Cache Usage per Node
+agents: ibm_svc
+catalog: hw/storagehw/ibm
+license: GPL
+distribution: check_mk
+description:
+ Reports the Write Cache Usage and Total Cache Usage for each node of an
+ IBM SVC / V7000 device in percent.
+
+ The check does report only and returns always {OK}.
+
+item:
+ The name of the node.
+
+inventory:
+ Creates one check per node.
+
+perfdata:
+ Two values: The write cache usage and the total cache usage in percent.
